--- a/데시이 과제_01/김예지_20210111.ipynb
+++ b/데시이 과제_01/김예지_20210111.ipynb
@@ -47,49 +47,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "8742c5bb-a92c-4800-90aa-62007720f33f",
    "metadata": {
+    "tags": [],
     "ExecuteTime": {
-     "end_time": "2025-03-25T16:03:08.286028Z",
-     "start_time": "2025-03-25T16:03:08.281089Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "폭염 지속일수가 가장 길었던 연도:2018년\n",
-      "해당 지점:금산\n",
-      "폭염 시작일:07월 11일\n",
-      "폭염 종료일:08월 16일\n",
-      "지속일수:37일\n"
-     ]
+     "end_time": "2025-03-28T16:06:47.405039Z",
+     "start_time": "2025-03-28T16:06:47.401294Z"
     }
-   ],
+   },
    "source": [
     "import csv\n",
     "\n",
     "f = open(\"heat_wave.csv\", 'r', encoding=\"cp949\")\n",
     "data = csv.reader(f)\n",
     "\n",
-    "# 아래부터 솜솜이가 작성해야 할 부분\n",
-    "\n",
     "# 헤더 5줄 건너뛰기\n",
     "for i in range(5):\n",
     "    next(data)\n",
     "\n",
     "# 변수 초기화 해주기\n",
-    "year = []\n",
-    "location = []\n",
-    "start_date = []\n",
-    "end_date = []\n",
-    "max_duration = 0 # 가장 긴 지속일수 저장\n",
+    "year = ''\n",
+    "location = ''\n",
+    "start_date = ''\n",
+    "end_date = ''\n",
+    "max_duration = 0  # 가장 긴 지속일수 저장\n",
     "\n",
     "for row in data:\n",
-    "    if row[4] != '': # 지속일수가 존재하는지 확인\n",
+    "    if row[4] != '':  # 지속일수가 존재하는지 확인\n",
     "        current_duration = int(row[4])\n",
     "        if current_duration > max_duration:\n",
     "            max_duration = current_duration\n",
@@ -98,21 +82,36 @@
     "            start_date = row[2]\n",
     "            end_date = row[3]\n",
     "            duration = int(row[4])\n",
-    "            \n",
+    "\n",
     "# 시작일/종료일에서 월, 일을 분리\n",
     "start_month = start_date[5:7]\n",
     "start_day = start_date[8:]\n",
     "end_month = end_date[5:7]\n",
     "end_day = end_date[8:]\n",
     "\n",
-    "print(f\"폭염 지속일수가 가장 길었던 연도:{year}년\")\n",
-    "print(f\"해당 지점:{location}\")\n",
-    "print(f\"폭염 시작일:{start_month}월 {start_day}일\")\n",
-    "print(f\"폭염 종료일:{end_month}월 {end_day}일\")\n",
-    "print(f\"지속일수:{max_duration}일\")\n",
+    "\n",
+    "print(\"폭염 지속일수가 가장 길었던 연도:\", year + \"년\")\n",
+    "print(\"해당 지점:\", location)\n",
+    "print(\"폭염 시작일:\", start_month + \"월\", start_day + \"일\")\n",
+    "print(\"폭염 종료일:\", end_month + \"월\", end_day + \"일\")\n",
+    "print(\"지속일수:\", str(max_duration) + \"일\")\n",
     "\n",
     "f.close()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "폭염 지속일수가 가장 길었던 연도: 2018년\n",
+      "해당 지점: 금산\n",
+      "폭염 시작일: 07월 11일\n",
+      "폭염 종료일: 08월 16일\n",
+      "지속일수: 37일\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -147,7 +146,9 @@
    "metadata": {
     "tags": []
    },
-   "source": "![img.png](img.png)"
+   "source": [
+    "![img.png](attachment:6100340a-5214-4f26-b752-6d42f0ef60e5.png)"
+   ]
   },
   {
    "cell_type": "code",
@@ -155,11 +156,17 @@
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2025-03-26T02:43:24.016348Z",
-     "start_time": "2025-03-26T02:43:23.776753Z"
+     "end_time": "2025-03-28T16:06:50.386203Z",
+     "start_time": "2025-03-28T16:06:50.333777Z"
     }
    },
    "source": [
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "f = open(\"sr_profit.csv\", 'r', encoding=\"cp949\")\n",
+    "data = csv.reader(f)\n",
+    "\n",
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -173,8 +180,8 @@
     "for i, col_name in enumerate(header):\n",
     "    if '경부선' in col_name:\n",
     "        year_part = col_name.split('년')[0] # '년'을 기준으로 나눠 연도만 추출해옴\n",
-    "        if year_part.isdigit() and int(year_part) % 2 != 0: # 연도가 숫자로만 이루어져있고 홀수 연도여야함 (공집합)\n",
-    "            target_cols[year_part] = i # 추출해야 하는 열 인덱스 {'2017': 3, '2019': 9, ...}\n",
+    "        if year_part.isdigit() and int(year_part) % 2 != 0: # 연도가 숫자로만 이루어져있고 홀수 연도여야함 (공집합\n",
+    "            target_cols[year_part] = i # 추출해야 하는 열 인덱스 {'2017': 4, '2019': 10, ...}\n",
     "\n",
     "# target_cols 딕셔너리에서 key값(연도)만 가져온 후 정렬\n",
     "sorted_years = sorted(target_cols.keys())\n",
@@ -224,36 +231,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1
+   "execution_count": 8
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-26T02:43:36.551733Z",
-     "start_time": "2025-03-26T02:43:36.549562Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "import os\n",
-    "print(os.getcwd())"
-   ],
-   "id": "2cb00ec77f247fd6",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/manggee/Code/dongduk/데이터시각화이해와실습/데시이 과제_01\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "ec112af0698f5e86"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
